@@ -1,5 +1,6 @@
-dist_bin_SCRIPTS = difxdbParseFiles.py
+dist_bin_SCRIPTS = difxdbParseFiles.py difxdbSyncFiles.py
 
 install-exec-hook:
 	mv $(DESTDIR)$(bindir)/difxdbParseFiles.py $(DESTDIR)$(bindir)/difxdbParseFiles
+	mv $(DESTDIR)$(bindir)/difxdbSyncFiles.py $(DESTDIR)$(bindir)/difxdbSyncFiles
 
